# bpm

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  docker-compose.yml  install.sh
.devcontainer/: devcontainer.json
.github/: release-signing-public.pem
.github/workflows/: ci.yml  pages.yml  release.yml
benchmarks/: README.md
benchmarks/baselines/: reference.json
benchmarks/profiles/: README.md  reference-folded.txt
crates/: README.md
docs/: _config.yml  architecture.md  cli.md  development.md  git-prepare-design.md  index.md  m7-concurrent-resolution-design.md  milestones.md  remote-cache-protocol.md
docs/_includes/: nav.html
fixtures/: README.md
fixtures/large-frontend/: package.json
fixtures/lifecycle/: package.json
fixtures/lifecycle/scripts/: record.cjs
fixtures/many-small-files/: package.json
fixtures/many-small-files/scripts/: generate.cjs
fixtures/monorepo/: package.json
fixtures/native-addon/: package.json
plans/: README.md
site/: index.html
src/: alternate_lock.rs  archive.rs  async_resolver.rs  bench.rs  config.rs  diagnostic.rs  doctor.rs  download.rs  graph.rs  http.rs  integrity.rs  lib.rs  lifecycle.rs  lockfile.rs  main.rs  manifest.rs  manifest_edit.rs  materializer.rs  metadata_cache.rs  metrics.rs  npm_lock.rs  package_image.rs  patch.rs  path_safety.rs  platform.rs  project.rs  project_lock.rs  registry.rs  remote_cache.rs  store.rs  store_lock.rs  volume.rs  workspace.rs
src/cli/: args.rs  audit.rs  bench.rs  doctor.rs  exec.rs  fetch.rs  gc.rs  import.rs  install.rs  mod.rs  mutate.rs  publish.rs  run.rs
src/derived/: key.rs  mod.rs  store.rs
src/gc/: mod.rs  policy.rs
src/http/: mod.rs  retry.rs
src/materializer/: compatible.rs
src/metadata/: install.rs  mod.rs  repository.rs  schema.rs
src/registry/: mod.rs
src/resolver/: fetch.rs  mod.rs  model.rs  overrides.rs  peer.rs  placement.rs  platform.rs  prepare_graph.rs  sources.rs  workspaces.rs
tests/: audit_publish.rs  bench.rs  doctor.rs  exec.rs  extraction.rs  fetch.rs  gc.rs  git_prepare_characterization.rs  import.rs  install.rs  install_bin.rs  install_windows.rs  installer.rs  lifecycle.rs  manifest_parsing.rs  mutation.rs  network.rs  network_pipeline.rs  project_root.rs  publish.rs  registry.rs  remote_cache.rs  resolver_model.rs  store.rs  volume.rs
tests/common/: mod.rs
