[package]
name = "bpm"
version = "0.0.0"
edition = "2021"
description = "Bloom Package Manager: an npm-compatible, performance-focused package installer"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Artifact store + download (Milestone 1)
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
flate2 = "1.0"
tar = "0.4"
ureq = { version = "2.12", features = ["tls"] }
httpdate = "1.0.3"
tempfile = "3.12"

# Graph-plan cache (Milestone 3): deterministic graph + plan hashing
blake3 = "1.5"

# Registry resolution: package-spec -> version range matching
semver = "1.0"

# Persistent metadata index (filesystem objects remain the source of truth).
rusqlite = { version = "0.40.1", features = ["bundled"] }

[dev-dependencies]
# Deterministic property and malformed-input regression tests.
proptest = "1.11.0"
