[package]
name = "bpm"
version = "0.0.1"
edition = "2021"
description = "Bloom Package Manager: an npm-compatible, performance-focused package installer"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Artifact store + download (Milestone 1)
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
flate2 = "1.0"
tar = "0.4"
# HTTP transport: reqwest::blocking over a pooled client, negotiating HTTP/2
# over TLS (ALPN) so concurrent registry/tarball requests multiplex per host.
# rustls negotiates HTTP/2 reliably across platforms; native-tls on macOS often
# fails ALPN and silently falls back to HTTP/1.1, capping metadata throughput.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "blocking", "http2", "stream"] }

# Async runtime for the non-blocking resolver path. Used by `async_resolver`
# to issue concurrent packument fetches without stalling the resolution thread.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
# Stream combinators used to bound retryable async response-body draining
# (shared with the blocking client's bounded drain limit).
futures-util = "0.3"
httpdate = "1.0.3"
tempfile = "3.12"

# Graph-plan cache (Milestone 3): deterministic graph + plan hashing
blake3 = "1.5"

# Registry resolution: package-spec -> version range matching
semver = "1.0"

# Persistent metadata index (filesystem objects remain the source of truth).
rusqlite = { version = "0.40.1", features = ["bundled"] }

# Unix-only: copy-on-write reflink/clone syscalls for the project-local view
# backend (macOS `clonefile(2)`, Linux `FICLONE` ioctl). The `Reflink`
# materialize backend degrades to hardlink->copy when the filesystem lacks
# support, so this dep only adds a faster path, never a correctness dependency.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]}

[dev-dependencies]
# Deterministic property and malformed-input regression tests.
proptest = "1.11.0"
